- Support PHP 7.
- Add "Constant-Time Encoding" in "lib" directory for supporting PHP 7.
  <https://github.com/paragonie/constant_time_encoding>
- In SQL Database, NULL value of date or datetime type fields are falling down zero components data,
  such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
- Tests for sample web pages by Selenium Web Driver are introduced.
- [BUG FIX] In case of the '#' target specification was placed on second or later item in data-im
  attribute, the field value wasn't shown in the node (Thanks to Tomomitsu Baba).
- [BUG FIX] The field which applied a data converter class in FMS's portal, the converter didn't
  apply to the value in updating the field value.

Ver.5.4 (August 24, 2016)
- You don't have to call INTERMediator.construct() anymore. If you want to do anything before page
  generating, describe "INTERMediatorOnPage.doBeforeConstruct = function(){..};" on any valid place.
  The node having the id attribute "nonsupportmessage" will disappear after page generating. If you
  require to the another id value, you can set it into params.php as the value "$nonSupportMessageId".
- "IN" operator in SQL db can be accepted with DB_PDO class. The value should be an array of itemized
  values.
- If the automatic calling to construct method doesn't requre, descirbe the below in doBeforeConstruct
  or prior to that: INTERMediatorOnPage.isAutoConstruct = false;
- Creating Cross Table for PDO. It contains 3 contexts for column, row and value cells.
  See the sample Samples/Practices/crosstable.html.
- The "post-query-stored" key in context of the definition file is introduced. It will be specified
  a method name, ant the method has to be define in the INTERMediatorOnPage object with one variable
  for referring context object. It will be called after query and stored values in context.
- The second "option" parameter of IM_Entry function can have the key "local-context" as the array of