@@ -16,7 +16,7 @@ Enter password:
 */
 SET NAMES 'utf8mb4';
 
-GRANT USAGE ON *.* TO 'web'@'localhost';
+GRANT USAGE ON *.* TO 'web'@'localhost' IDENTIFIED BY 'password';
 DROP USER 'web'@'localhost';
 CREATE USER 'web'@'localhost' IDENTIFIED BY 'password';
 
